--- a/Praktikum6_Adamdarmawan/Praktikum6_AdamDarmawan.html
+++ b/Praktikum6_Adamdarmawan/Praktikum6_AdamDarmawan.html
@@ -47,15 +47,15 @@
 </head>
 <body>
     <header>
-        <img src="img/Logo Polibang conture.png" alt="Logo Polibang" style="width: 70px;">
+        <img src="Logo Polibang conture.png" alt="Logo Polibang" style="width: 70px;">
         <h1>Politeknik Balekambang</h1>
         <p>Program Studi Rekayasa Perangkat Lunak</p>
     </header>
     <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
+        <a href="Praktikum6_AdamDarmawan.html">Home</a>
+        <a href="About.html">About</a>
         <a href="https://www.polibang.ac.id/" target="_blank">Website Polibang</a>
-        <a href="#contact">Contact</a>
+        <a href="contact.html">Contact</a>
     </nav>
     <div class="container">
         <section>
@@ -82,14 +82,14 @@
                 <li><a href="biodata_bagus.html">Bagus</a></li>
                 <li><a href="biodata_zaka.html">Zaka</a></li>
                 <li><a href="biodata_hanip.html">Hanip</a></li>
-                <li><a href="biodata_amba.html">Amba</a></li>
+                <li><a href="biodata_amba.html">Rio</a></li>
             </ul>
             <div id="friendInfo"></div>
         </aside>
     </div>
 
     <footer>
-        <img src="img/Logo Polibang conture.png" alt="Logo Kecil" style="width: 30px;">
+        <img src="Logo Polibang conture.png" alt="Logo Kecil" style="width: 30px;">
         <p>Website ini dibuat oleh Adam</p>
         <p>	Balekambang Rt 02 Rw 07 Gemiring Lor Nalumsari Jepara 59466</p>
     </footer>
