--- a/Praktikum6_Adamdarmawan/biodata_zaka.html
+++ b/Praktikum6_Adamdarmawan/biodata_zaka.html
@@ -32,10 +32,10 @@
 
 </style>
 <body> 
-    <h1 align="center">Biodata  Bagus</h1><br> 
+    <h1 align="center">Biodata  zaka</h1><br> 
     <ul> 
-        <img src="img/images.png" alt="" style="width: auto;">
-        <li><strong>Nama:</strong> hani</li> <br> 
+        <img src="images.png" alt="" style="width: auto;">
+        <li><strong>Nama:</strong> Zaka</li> <br> 
         <li><strong>NIM: </strong>2023010001 </li><br> 
         <li><strong>Program Studi:</strong> Rekayasa Perangkat lunak </li><br> 
         <li><strong>Kelas:</strong> RPL A 2023</li><br> 
