--- a/HTML/biodata_amba.html
+++ b/HTML/biodata_amba.html
@@ -17,6 +17,7 @@
         }
         img {
             width: 70px;
+            padding: 20px;
         }
         h1 {
             color: #007bff;
@@ -26,12 +27,15 @@
         ul{
             color: #091f50;
             font-weight: bold;
+
         }
+
 </style>
 <body> 
-    <h1 align="center">Biodata  Amba</h1><br> 
+    <h1 align="center">Biodata  Bagus</h1><br> 
     <ul> 
-        <li><strong>Nama:</strong> Amba</li> <br> 
+        <img src="images.png" alt="" style="width: auto;">
+        <li><strong>Nama:</strong> amba</li> <br> 
         <li><strong>NIM: </strong>2023010001 </li><br> 
         <li><strong>Program Studi:</strong> Rekayasa Perangkat lunak </li><br> 
         <li><strong>Kelas:</strong> RPL A 2023</li><br> 
