--- a/HTML/biodata_bagus.html
+++ b/HTML/biodata_bagus.html
@@ -17,6 +17,7 @@
         }
         img {
             width: 70px;
+            padding: 20px;
         }
         h1 {
             color: #007bff;
@@ -26,11 +27,14 @@
         ul{
             color: #091f50;
             font-weight: bold;
+
         }
+
 </style>
 <body> 
     <h1 align="center">Biodata  Bagus</h1><br> 
     <ul> 
+        <img src="img/images.png" alt="" style="width: auto;">
         <li><strong>Nama:</strong> Bagus</li> <br> 
         <li><strong>NIM: </strong>2023010001 </li><br> 
         <li><strong>Program Studi:</strong> Rekayasa Perangkat lunak </li><br> 
