--- a/Praktikum6_Adamdarmawan/biodata_hanip.html
+++ b/Praktikum6_Adamdarmawan/biodata_hanip.html
@@ -17,6 +17,7 @@
         }
         img {
             width: 70px;
+            padding: 20px;
         }
         h1 {
             color: #007bff;
@@ -26,12 +27,15 @@
         ul{
             color: #091f50;
             font-weight: bold;
+
         }
+
 </style>
 <body> 
-    <h1 align="center">Biodata  Bagus</h1><br> 
+    <h1 align="center">Biodata  hanip</h1><br> 
     <ul> 
-        <li><strong>Nama:</strong> Bagus</li> <br> 
+        <img src="WhatsApp Image 2024-11-04 at 05.40.53_792da81e.jpg" alt="" style="width: 300px;">
+        <li><strong>Nama:</strong> hani</li> <br> 
         <li><strong>NIM: </strong>2023010001 </li><br> 
         <li><strong>Program Studi:</strong> Rekayasa Perangkat lunak </li><br> 
         <li><strong>Kelas:</strong> RPL A 2023</li><br> 
